# auth-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routes/: auth.py  health.py
app/core/: config.py  db.py  security.py
app/models/: user.py
app/schemas/: auth.py  user.py
app/services/: auth.py  create_user.py
tests/: conftest.py  test_auth.py  test_health.py
